# automations

./: deploy.py  pyproject.toml
src/automations/: config.py  rates.py
src/automations/flows/: rates.py
src/automations/shared/: exceptions.py  hotels.py  mail.py  rapid_api.py
src/automations/shared/clients/: hotels_com.py  rapid_api.py  s3_client.py
src/automations/templates/: email.html.j2
